--- a/style.css
+++ b/style.css
@@ -132,6 +132,25 @@ section#about p {
     letter-spacing: 0.01em;
 }
 
+/* Section: Success Stories */
+
+section#sucess-stories {
+    min-height: 700px;
+}
+
+.drop-shadow-carousel {
+    box-shadow: 0px 0px 103px 0px #00000040;
+}
+
+.border-carousel {
+    background: #D9D9D9;
+    border-radius: 75px;
+}
+
+.height-carousel {
+    height: 30vh;
+}
+
 
 /* Bootstrap overriding */
 
@@ -163,4 +182,23 @@ section#about p {
     line-height: 47px;
     letter-spacing: -0.005em;
     text-align: left;
+}
+
+.carousel-indicators {
+    bottom: -90px !important;
+}
+
+.carousel-indicators [data-bs-target] {
+    border-radius: 50% !important;
+    width: 15px !important;
+    height: 15px !important;
+    opacity: 0.2 !important;
+}
+
+.carousel-indicators .active {
+    opacity: 1 !important;
+}
+
+.carousel-item {
+    height: 100% !important;
 }
