--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ section {
 }
 
 .hud-white-color {
+    color: #F5F8FF;
+}
+
+.hud-white-bg-color {
     background: #F5F8FF;
 }
 
@@ -73,6 +77,7 @@ section {
     background-color: #1a25398c;
 }
 
+/* TODO: split in two classes: URL and background cover */
 .bg-home-img {
     background-image: url('img/hero.png');
     background-position: center; /* Center the image */
@@ -168,7 +173,7 @@ section#sucess-stories {
 
 section#hallmark {
     height: 1000px;
-    min-height: fit-content;
+    /* min-height: fit-content; */
 }
 
 @media only screen and (max-width: 425px){
@@ -207,6 +212,8 @@ section#hallmark .card-body {
 
 .hallmark-div {
     height: 60%;
+    /* padding-top: 5rem; */
+    /* padding-bottom: 5rem; */
 }
 
 .hallmark-card {
@@ -269,6 +276,72 @@ section#hallmark .card-body {
     font-weight: 700;
     line-height: 26px;
     letter-spacing: 0.185em;
+}
+
+/* Section: Contact */
+
+section#contact {
+    height: 1000px;
+}
+
+.bg-contact-img {
+    background-image: url('img/contact-bg.png');
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-size: cover; 
+}
+
+.bg-contact {
+    background: linear-gradient(180deg, #1F263B 0%, #0A1B2A 57.41%, #051826 100%);
+    /* transform: matrix(1, 0, 0, -1, 0, 0); */
+}
+
+.contact-wrapper {
+    max-width: 1000px;
+}
+
+.contact-title {
+    font-size: 55px;
+    font-weight: 700;
+    line-height: 88px;
+    letter-spacing: -0.005em;
+}
+
+.contact-subtitle {
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: -0.005em;
+}
+
+.contact-form-label {
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 34px;
+    letter-spacing: -0.005em;
+}
+
+.contact-form {
+    height: 70vh;
+    max-height: 800px;
+}
+
+.contact-form-control {
+    width: 100%;
+    height: 78px;
+
+    background: #FFFFFF;
+    /* Verde Hud */
+
+    border: 6px solid #CDFF1A;
+    /* Drop Shadow */
+
+    box-shadow: 5.95712px 20px 29px rgba(0, 0, 0, 0.05);
+    border-radius: 87px;
+}
+
+.contact-rectangle {
+    max-width: 280px;
 }
 
 /* Bootstrap overriding */
