--- a/style.css
+++ b/style.css
@@ -17,13 +17,7 @@ html {
     width: 100%;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    font-size: 10.5px;
-}
-
-@media only screen and (min-width: 576px){
-    html {
-        font-size: 12px;
-    }
+    font-size: 12px;
 }
 
 @media only screen and (min-width: 768px){
@@ -60,7 +54,7 @@ html {
 
 .small-text {
     font-weight: 400;
-    font-size: 0.9375rem;
+    font-size: 1rem;
     line-height: 1.8125rem;
     color: #000000;
 }
@@ -174,34 +168,36 @@ section#home h2 {
 
 /* #region Section: Methods */
 
-section#methods .card-body {
-    padding: 38px;
+section#methods {
+    padding-bottom: 5rem;
 }
 
-section#methods hr {
-    background: #f5f5f5;
-    width: 50px;
-    height: 4px;
-    opacity: 1 !important;
+section#methods .card {
+    width: 23.375rem;
+    margin: auto;
+}
+
+section#methods .card-body {
+    padding: 1.875rem;
+}
+
+.methods-hr {
+    background: #F5F5F5;
+    width: 3.125rem;
+    height: 0.25rem;
+    opacity: 1;
 }
 
 .card-bg-img {
     background-image: url('img/method-frame.png');
 }
 
-.card-rounded {
-    /* background: #051826; */
-    border-radius: 40px 40px 40px 0px !important;
-}
-
-.card-rounded-top {
-    /* background: #051826; */
-    border-radius: 40px 40px 0px 0px !important;
-}
-
-.card-rounded-bottom {
+.card-bg-color {
     background: #F5F5F5;
-    border-radius: 0px 0px 40px 0px !important;
+}
+
+.card-rounded {
+    border-radius: 40px 40px 40px 0px;
 }
 
 /* #endregion */
@@ -452,9 +448,9 @@ section#contact {
 }
 
 .card-title {
-    font-size: 35px;
+    font-size: 2.1875rem;
     font-weight: 700;
-    line-height: 47px;
+    line-height: 2.9375rem;
     letter-spacing: -0.005em;
     text-align: left;
 }
