--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@
 html {
     height: 100%;
     width: 100%;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
     font-size: 12px;
 }
 
@@ -30,6 +28,11 @@ html {
     html {
         font-size: 16px;
     }
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
 
 /* #endregion */
@@ -110,10 +113,9 @@ section#home h1 {
     font-size: 2.375rem; /*38px*/
     font-weight: 300;
     line-height: 2.875rem;
-    letter-spacing: 0.73rem;
+    letter-spacing: 0.33em;
 }
 
-/* TODO: transition kind like typing */
 section#home h2 {
     font-size: 4.375rem; /*70px*/
     font-weight: 600;
@@ -135,7 +137,7 @@ section#home h2 {
     font-size: 1.1875rem;
     font-weight: 600;
     line-height: 1.625rem;
-    letter-spacing: 0.185rem;
+    letter-spacing: 0.185em;
     border: 2px solid #CDFF1A;
     background: transparent;
     padding: 0.9rem 3rem;
@@ -238,14 +240,40 @@ section#methods .card-body {
 
 /* #region Section: Team */
 
-section#team p {
+section#team {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+@media only screen and (min-width: 992px){
+    section#team {
+        padding-top: 8rem;
+        padding-bottom: 9rem;
+    }
+}
+
+.team-frame {
+    max-width: 45%;
+    bottom: 15%;
+    height: 80%;
+}
+
+@media only screen and (min-width: 576px){
+    .team-frame {
+        top: 0;
+        /* width: auto; */
+        height: auto;
+    }   
+}
+
+.team-p {
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1.25rem; /*20px*/
     line-height: 180%;
     letter-spacing: 0.01em;
 }
 
-.bg-about-gradient {
+.bg-team-gradient {
     /* background: linear-gradient(180deg, #FFFFFF 51.36%, #E1FF76 56.41%, #DAFF54 58.32%, #D2FF33 62.42%, #CDFF1A 67.47%, #D8FF4E 76.89%, #E4FF82 79.76%, #FFFFFF 84.81%); */
     background: linear-gradient(180deg, #FFFFFF, #E1FF76, #DAFF54, #D2FF33, #CDFF1A, #D8FF4E, #E4FF82, #FFFFFF);
 }
