Update contact section

--- a/style.css
+++ b/style.css
@@ -146,16 +146,15 @@ section#home h2 {
     border-color: #CDFF1A;
     color: white;
 
-    transition: all 0.2s linear;
+    transition: all 0.1s linear;
 }
 
 .home-btn:hover {
-    opacity: 0.85;
     border-color: white;
     background-color: #CDFF1A;
     color: #051826;
 
-    transition: all 0.2s linear;
+    transition: all 0.1s linear;
 }
 
 .js-navbar-bg {
@@ -449,15 +448,8 @@ button.hallmark-btn:hover {
 
 /* #region Section: Contact */
 
-section#contact {
-    /* height: 1000px; */
-}
-
 .bg-contact-img {
     background-image: url('img/contact-bg.png');
-    background-position: center;
-    background-repeat: no-repeat; 
-    background-size: cover; 
 }
 
 .bg-contact {
@@ -465,33 +457,27 @@ section#contact {
 }
 
 .contact-wrapper {
-    max-width: 800px;
+    max-width: 66.625rem;
 }
 
 .contact-title {
-    font-size: 55px;
+    font-size: 3.4375rem;
     font-weight: 700;
-    line-height: 88px;
+    line-height: 5.5rem;
     letter-spacing: -0.005em;
 }
 
-@media only screen and (min-width: 1024px){
-    .contact-title {
-        white-space: nowrap;
-    }
-}
-
 .contact-subtitle {
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 500;
-    line-height: 40px;
+    line-height: 2.5rem;
     letter-spacing: -0.005em;
 }
 
 .contact-form-label {
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 500;
-    line-height: 34px;
+    line-height: 2.125rem;
     letter-spacing: -0.005em;
 }
 
@@ -501,7 +487,7 @@ section#contact {
 
 .contact-form-control {
     width: 100%;
-    height: 78px;
+    height: 4.875rem;
 
     background: #FFFFFF;
     /* Verde Hud */
@@ -514,7 +500,7 @@ section#contact {
 }
 
 .contact-rectangle {
-    max-width: 280px;
+    width: 17.5rem;
 }
 
 /* #endregion */
