--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 
 .home-h1 {
     font-size: 2.375rem; /*38px*/
-    font-weight: 300;
+    font-weight: 400;
     line-height: 2.875rem;
     letter-spacing: 0.33em;
 }
@@ -162,7 +162,7 @@ body {
 }
 
 .bg-home-img {
-    background-image: url('img/hero.png');
+    background-image: url('img/hero.webp');
 }
 
 /* #endregion */
@@ -224,7 +224,7 @@ section#methods .card-body {
 }
 
 .card-bg-img {
-    background-image: url('img/method-frame.png');
+    background-image: url('img/method-frame.webp');
 }
 
 .card-bg-color {
@@ -449,7 +449,7 @@ button.hallmark-btn:hover {
 /* #region Section: Contact */
 
 .bg-contact-img {
-    background-image: url('img/contact-bg.png');
+    background-image: url('img/contact-bg.webp');
 }
 
 .bg-contact {
