--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ body {
 }
 
 .bg-home-img {
-    background-color: #051826;
     background-image: url('img/hero.webp');
     background-color: rgb(0,0,0,0);
 }
@@ -183,8 +182,18 @@ div#md-block .card {
 div#xs-block .card {
     width: 85%;
     max-width: 350px;
-    min-height: 310px;
+    min-height: 460px;
     margin: auto;
+}
+
+@media only screen and (min-width: 300px){
+    div#xs-block .card{
+        min-height: 340px;
+    }
+}
+
+div#xs-block .carousel-inner {
+    padding-bottom: 4.6rem;
 }
 
 div#xs-block .carousel-control-next-icon, div#xs-block .carousel-control-prev-icon {
@@ -254,7 +263,7 @@ section#team {
 }
 
 .team-frame {
-    max-width: 45%;
+    /* max-width: 45%; */
     bottom: 15%;
     height: 80%;
 }
