--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body {
 
 .bg-home-img {
     background-image: url('img/hero.webp');
-    background-color: rgb(0,0,0,0);
+    background-color: rgb(0,0,0,0) !important;
 }
 
 /* #endregion */
